Add support for specific commit ids
This commit adds support for checking out a specific commit,
in addition to branches and tags.

--- a/samples/basic/groovy/settings.gradle
+++ b/samples/basic/groovy/settings.gradle
@@ -7,6 +7,12 @@ rootProject.name = "basic"
 gitRepositories {
     include('testlib0') {
         uri = 'https://github.com/melix/includegit-gradle-plugin.git'
-        branch = 'testlib-0'
+        if (gradle.startParameter.projectProperties.containsKey("useCommit")) {
+            println "Using commit"
+            commit = 'df01b5ffd'
+        } else {
+            println "Using branch"
+            branch = 'testlib-0'
+        }
     }
 }
