Support checking out in a specific directory
Accidentally, this also makes sure that the included build
name doesn't depend on the directory name.

Fixes #10
Closes #11

--- a/samples/basic/groovy/settings.gradle
+++ b/samples/basic/groovy/settings.gradle
@@ -14,5 +14,8 @@ gitRepositories {
             println "Using branch"
             branch = 'testlib-0'
         }
+        if (providers.systemProperty("checkoutDir").isPresent()) {
+            checkoutDirectory.set(file(providers.systemProperty("checkoutDir").get()))
+        }
     }
 }
