Make tests run properly on Windows

--- a/samples/advanced-includes/groovy/settings.gradle
+++ b/samples/advanced-includes/groovy/settings.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'me.champeau.includegit'
 }
 
-rootProject.name = "basic"
+rootProject.name = "advanced-includes"
 
 gitRepositories {
     if (System.getProperty("autoInclude")) {
