Fix inclusion of multiple subdirectories and allow additional inclusion of the root directory

--- a/samples/advanced-includes/groovy/settings.gradle
+++ b/samples/advanced-includes/groovy/settings.gradle
@@ -26,6 +26,21 @@ gitRepositories {
             includeBuild(System.getProperty("subdir")) {
                 name = 'testlib1'
             }
+            if (System.getProperty("subdir2")) {
+                includeBuild(System.getProperty("subdir2")) {
+                    name = 'testlib1_2'
+                    dependencySubstitution {
+                        substitute(module("com.acme.somelib:somelib2")).with(project(":"))
+                    }
+                }
+            } else if (System.getProperties().containsKey("subdir2")) {
+                includeBuild {
+                    name = 'testlib'
+                    dependencySubstitution {
+                        substitute(module("com.acme.somelib:somelib2")).with(project(":"))
+                    }
+                }
+            }
         }
     }
 }
