Update Jsch dependency

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 jgit = "5.13.0.202109080827-r"
+jsch = "0.2.3"
 spock = "2.0-groovy-3.0"
 groovy = "3.0.9"
 
@@ -8,6 +9,7 @@ groovy = { module = "org.codehaus.groovy:groovy", version.ref = "groovy" }
 spock = { module = "org.spockframework:spock-core", version.ref = "spock" }
 jgit = { module = "org.eclipse.jgit:org.eclipse.jgit", version.ref = "jgit" }
 jgit-jsch = { module = "org.eclipse.jgit:org.eclipse.jgit.ssh.jsch", version.ref = "jgit" }
+jsch = { module = "com.github.mwiede:jsch", version.ref = "jsch" }
 
 [bundles]
 jgit = ["jgit", "jgit-jsch"]
