--- a/samples/advanced-includes/groovy/settings.gradle
+++ b/samples/advanced-includes/groovy/settings.gradle
@@ -30,14 +30,14 @@ gitRepositories {
                 includeBuild(System.getProperty("subdir2")) {
                     name = 'testlib1_2'
                     dependencySubstitution {
-                        substitute(module("com.acme.somelib:somelib2")).with(project(":"))
+                        substitute(module("com.acme.somelib:somelib2")).using(project(":"))
                     }
                 }
             } else if (System.getProperties().containsKey("subdir2")) {
                 includeBuild {
                     name = 'testlib'
                     dependencySubstitution {
-                        substitute(module("com.acme.somelib:somelib2")).with(project(":"))
+                        substitute(module("com.acme.somelib:somelib2")).using(project(":"))
                     }
                 }
             }
